--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "file-saver": "2.0.5",
     "primeicons": "^6.0.1",
     "primevue": "^3.45.0",
-    "quill": "^1.3.7",
+    "quill": "2.0.0-rc.2",
     "sortablejs": "^1.15.1",
     "vue": "^3.3.13",
     "vue-router": "^4.2.5",
@@ -32,10 +32,10 @@
     "@types/node": "^20.10.5",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "3.3.13",
-    "sass": "1.69.5",
+    "@vue/compiler-sfc": "3.4.20",
+    "sass": "1.71.1",
     "unplugin-auto-import": "0.17.2",
-    "vite": "5.0.5",
+    "vite": "5.1.4",
     "vite-plugin-compression": "0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-setup-extend": "0.4.0"
