--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
     "@vueuse/core": "^10.7.0",
-    "@vueuse/shared": "^10.7.0",
+    "@vueuse/shared": "10.7.0",
     "axios": "1.6.2",
     "chart.js": "^4.4.1",
     "clipboard": "^2.0.11",
