--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "build:lib": "vite build -c vite.lib.config.js",
     "build:lib:render": "vite build -c vite.lib.render.config.js",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "gh-pages": "node gh-pages.js"
   },
   "dependencies": {
     "@vueuse/core": "^10.7.0",
@@ -36,7 +37,8 @@
     "vite": "5.1.4",
     "vite-plugin-compression": "0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-setup-extend": "0.4.0"
+    "vite-plugin-vue-setup-extend": "0.4.0",
+    "gh-pages": "^6.1.1"
   },
   "files": [
     "lib"
